--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "MEAN Contact List Example",
-  "description": "A MEAN app that allows users to manage a contact list.",
-  "repository": "https://github.com/chrisckchang/mean-contactlist",
-  "logo": "https://mlab.com/company/brand/resources/mLab-logo-onlight.png",
-  "keywords": ["node", "express", "angular", "MEAN", "mongodb", "REST", "API"],
+  "name": "Parking Lot booking api",
+  "description": "APIs for booking parking slot",
+  "repository": "",
+  "logo": "",
+  "keywords": ["node", "express", "mongodb", "REST", "API"],
   "addons": ["mongolab"]
 }
