--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "author": "Ankur Zilpelwar",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.13.3",
+    "dotenv": "^8.2.0",
     "express": "^4.13.3",
+    "lodash": "^4.17.20",
     "mongodb": "^2.0.43"
   }
 }
